--- a/src/App.css
+++ b/src/App.css
@@ -31,3 +31,40 @@ body {
   background-color: #111;
   color: white;
 }
+
+
+.search-bar {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 20px;
+}
+
+.search-input {
+  width: 100%;
+  max-width: 400px;
+  padding: 8px;
+  font-size: 16px;
+  border-radius: 4px;
+  border: 1px solid #ddd;
+  transition: border 0.3s;
+}
+
+.search-input:focus {
+  outline: none;
+  border-color: #007bff;
+}
+
+.movie-poster,
+.serie-poster {
+  width: 100%;
+  max-width: 200px;
+  margin: 10px;
+  border-radius: 8px;
+  transition: transform 0.3s ease;
+}
+
+.movie-poster:hover,
+.serie-poster:hover {
+  transform: scale(1.05);
+}
